tests/lean/empty.lean.expected.out
empty.lean:6:25: error: type error in placeholder assigned to
  char_inhabited
placeholder has type
  inhabited char
but is expected to have type
  inhabited ?M_1
the assignment was attempted when trying to solve
    failed to synthesize placeholder
     ⊢ inhabited Empty
